--- a/pom.xml
+++ b/pom.xml
@@ -1,114 +1,169 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.vilt</groupId>
-	<artifactId>spring-remoting-crosscontext</artifactId>
-	<version>1.0.3-SNAPSHOT</version>
-	<name>Cross-context Spring Remoting</name>
-	<description>Spring Remoting using a cross-context communication "protocol"</description>
+    <modelVersion>4.0.0</modelVersion>
 
-	<developers>
-		<developer>
-			<id>rui.figueira</id>
-			<name>Rui Figueira</name>
-			<email>rui.figueira@vilt-group.com</email>
-			<organization>VILT Group</organization>
-			<organizationUrl>http://www.vilt-group.com</organizationUrl>
-			<timezone>Europe/Lisbon</timezone>
-		</developer>
-	</developers>
-	<scm>
-		<connection>scm:svn:http://svn.vilt-group.com/svn/internal/commons/spring-remoting-crosscontext/trunk</connection>
-		<developerConnection>scm:svn:http://svn.vilt-group.com/svn/internal/commons/spring-remoting-crosscontext/trunk</developerConnection>
-		<url>http://svn.vilt-group.com/svn/internal/commons/spring-remoting-crosscontext/trunk</url>
-	</scm>
-	<organization>
-		<name>VILT Group</name>
-		<url>http://www.vilt-group.com</url>
-	</organization>
+    <parent>
+        <groupId>org.sonatype.oss</groupId>
+        <artifactId>oss-parent</artifactId>
+        <version>7</version>
+    </parent>
 
-	<properties>
-		<springframework.version>3.1.0.RELEASE</springframework.version>
-	    <servlet.version>2.5</servlet.version>		
-	</properties>
-	
-	<dependencies>
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-core</artifactId>
-			<version>${springframework.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-context</artifactId>
-			<version>${springframework.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-web</artifactId>
-			<version>${springframework.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>javax.servlet</groupId>
-			<artifactId>servlet-api</artifactId>
-			<version>${servlet.version}</version>
-			<scope>provided</scope>
-		</dependency>
-		
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.10</version>
-			<scope>test</scope>
-			<exclusions>
-				<exclusion>
-					<groupId>org.hamcrest</groupId>
-					<artifactId>org.hamcrest</artifactId>
-				</exclusion>
-			</exclusions>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-test</artifactId>
-			<version>3.1.1.RELEASE</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.mockito</groupId>
-			<artifactId>mockito-all</artifactId>
-			<version>1.9.0</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.hamcrest</groupId>
-			<artifactId>hamcrest-core</artifactId>
-			<version>1.3.RC2</version>
-			<scope>test</scope>
-		</dependency>
-	</dependencies>
-	
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<configuration>
-					<source>1.5</source>
-					<target>1.5</target>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
-	
-	<distributionManagement>
-		<repository>
-			<id>com.vilt.releases</id>
-			<name>VILT Releases Repository</name>
-			<url>https://maven.vilt-group.com/content/repositories/releases</url>
-		</repository>
-		<snapshotRepository>
-			<id>com.vilt.snapshots</id>
-			<name>VILT Snapshots Repository</name>
-			<url>https://maven.vilt-group.com/content/repositories/snapshots</url>
-		</snapshotRepository>
-	</distributionManagement>
+    <groupId>com.vilt</groupId>
+    <artifactId>spring-remoting-crosscontext</artifactId>
+    <version>1.0.3-SNAPSHOT</version>
+    <name>Cross-context Spring Remoting</name>
+    <description>Spring Remoting using a cross-context communication "protocol"</description>
+    
+    <developers>
+        <developer>
+            <id>rui.figueira</id>
+            <name>Rui Figueira</name>
+            <email>rui.figueira@vilt-group.com</email>
+            <organization>VILT Group</organization>
+            <organizationUrl>http://www.vilt-group.com</organizationUrl>
+            <timezone>Europe/Lisbon</timezone>
+        </developer>
+        <developer>
+            <id>ricardo.santos</id>
+            <name>Ricardo Santos</name>
+            <email>ricardo.santos@vilt-group.com</email>
+            <organization>VILT Group</organization>
+            <organizationUrl>http://www.vilt-group.com</organizationUrl>
+            <timezone>Europe/Lisbon</timezone>
+        </developer>
+    </developers>
+
+    <scm>
+        <connection>scm:git:git://github.com/viltgroup/spring-remoting-crosscontext.git</connection>
+        <developerConnection>scm:git:ssh://git@github.com/viltgroup/spring-remoting-crosscontext.git</developerConnection>
+        <url>https://github.com/viltgroup/spring-remoting-crosscontext</url>
+    </scm>
+
+    <organization>
+        <name>VILT Group</name>
+        <url>http://www.vilt-group.com</url>
+    </organization>
+
+    <licenses>
+        <license>
+            <name>The Apache Software License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+            <distribution>repo</distribution>
+            <comments>A business-friendly OSS license</comments>
+        </license>
+    </licenses>
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        
+        <springframework.version>[3.0.6.RELEASE,)</springframework.version>
+        <servlet.version>[2.4,)</servlet.version>
+    </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-core</artifactId>
+            <version>${springframework.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>${springframework.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>${springframework.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>${servlet.version}</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.10</version>
+            <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.hamcrest</groupId>
+                    <artifactId>org.hamcrest</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>${springframework.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>1.9.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-core</artifactId>
+            <version>1.3.RC2</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.0.2</version>
+                <configuration>
+                    <source>1.5</source>
+                    <target>1.5</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
+    <profiles>
+        <profile>
+            <id>release-javadocs</id>
+            <activation>
+                <property>
+                    <name>performRelease</name>
+                    <value>true</value>
+                </property>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-javadoc-plugin</artifactId>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>release-sign-artifacts</id>
+            <activation>
+                <property>
+                    <name>performRelease</name>
+                    <value>true</value>
+                </property>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-gpg-plugin</artifactId>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
+
 </project>
